<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/rate"
        android:textSize="15sp" />

    <Button
        android:id="@+id/rateOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_mastermind" />

    <Button
        android:id="@+id/rateLater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_later" />

    <Button
        android:id="@+id/rateNever"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/rate_no" />

</LinearLayout>